# proceso

./: .gitignore  README.md  setup.cfg
examples/arm/: index.html  sketch.py
examples/composite_objects/: index.html  sketch.py
examples/continuous_lines/: index.html  pyscript.json  sketch.py
examples/directional/: index.html  sketch.py
examples/flocking/: index.html  sketch.py
examples/iteration/: index.html  sketch.py
examples/letters/: index.html  sketch.py
examples/list/: index.html  sketch.py
examples/load_display_image/: index.html  sketch.py
examples/morph/: index.html  sketch.py
examples/noise_wave/: index.html  sketch.py
examples/pie_chart/: index.html  sketch.py
examples/ray_casting/: index.html  sketch.py
examples/recursion/: index.html  sketch.py
examples/relativity/: index.html  sketch.py
examples/repl/: index.html
examples/simple_shapes/: index.html  sketch.py
examples/sync/: index.html  sketch.py
examples/variables/: index.html  sketch.py
examples/video_capture/: index.html  sketch.py
examples/wavemaker/: index.html  sketch.py
src/proceso/: __init__.py  _binding.py  _setup.py  binding.py  color.py  colors.py  constants.py  core.py  data.py  dom.py  environment.py  events.py  images.py  io.py  rendering.py  shape.py  structure.py  sysvars.py  three_d.py  transform.py  typography.py  utils.py
src/proceso/math/: __init__.py  calculation.py  noise.py  random.py  trigonometry.py  vector.py
