[metadata]
name = proceso
version = 0.0.17
author = Nick McIntyre
author_email = nick@mcintyre.io
description = A Python package for creative coding on the web.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickmcintyre/proceso
project_urls =
    Bug Tracker = https://github.com/nickmcintyre/proceso/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Environment :: WebAssembly
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy >= 1.23
[options.packages.find]
where = src
